<resources>
    <!-- App/General strings -->
    <string name="app_name" translatable="false">Task Family</string>
    <string name="email_adress" translatable="true">Endereço de e-mail</string>
    <string name="email_adress_required" translatable="true">Endereço de e-mail*</string>
    <string name="password">Senha</string>
    <string name="password_required" translatable="true">Senha*</string>
    <string name="password_confirm_required" translatable="true">Confirmar senha*</string>
    <string name="enter" translatable="true">Entrar</string>
    <string name="register" translatable="true">Registrar</string>

    <!-- Auth strings -->
    <string name="login_greeting" translatable="true">Vamos Entrar!</string>
    <string name="login_slogan" translatable="true">É bom te ver novamente</string>
    <string name="dont_have_account" translatable="true">Não possui uma conta?</string>

    <string name="sign_greeting" translatable="true">Vamos Registrar!</string>
    <string name="sign_slogan" translatable="true">É um prazer te conhecer</string>
    <string name="have_account" translatable="true">Já possui uma conta?</string>

    <string name="login_greeting2" translatable="true">Bem Vindo!</string>
    <string name="login_slogan2" translatable="true">Resolva tarefas com Task Fun</string>
    <string name="iam_responsable" translatable="true">Sou responsável</string>
    <string name="iam_child" translatable="true">Sou criança</string>

    <string name="ask_for_parent" translatable="true">Peça para os seus pais te ajudarem!</string>
    <string name="email_parent" translatable="true">Email do responsável</string>
    <string name="password_parent" translatable="true">Senha do responsável</string>
    <string name="name_child" translatable="true">Nome da criança</string>
    <string name="home">Home</string>
    <string name="tarefas">Tarefas</string>
    <string name="perfil">Perfil</string>
    <string name="nome_da_tarefa" translatable="true">Nome da tarefa:</string>
</resources>
