<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg950">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:orientation="vertical"
        android:background="@color/bg950">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:src="@drawable/icon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/login_greeting2"
                android:textColor="@color/text700"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_slogan2"
            android:textColor="@color/text600"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/cock"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/bg950"
            android:layout_marginTop="70dp">


            <Button
                android:id="@+id/adult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_model"
                android:paddingVertical="12dp"
                android:text="@string/iam_responsable"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/kid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_model2"
                android:paddingVertical="12dp"
                android:text="@string/iam_child"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>